rust/crates/dsl-core/tests/snapshots/plan_golden__dag_binding_chain_three_steps.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 154
expression: dag
---
PopulatedExecutionDag {
    edges: [
        BindingEdge {
            from: NodeId(
                0,
            ),
            to: NodeId(
                1,
            ),
            slot: BindingSlotId(
                "cbu",
            ),
        },
        BindingEdge {
            from: NodeId(
                1,
            ),
            to: NodeId(
                2,
            ),
            slot: BindingSlotId(
                "case",
            ),
        },
    ],
}
