rust/crates/dsl-core/tests/snapshots/plan_golden__dag_cancellation_scope_stub.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 205
expression: dag
---
PopulatedExecutionDag {
    edges: [
        CancellationScopeEdge {
            trigger: NodeId(
                0,
            ),
            scope: [
                NodeId(
                    1,
                ),
                NodeId(
                    2,
                ),
            ],
        },
    ],
}
