rust/crates/dsl-core/tests/snapshots/plan_golden__dag_complex_onboarding_graph.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 252
expression: dag
---
PopulatedExecutionDag {
    edges: [
        BindingEdge {
            from: NodeId(
                0,
            ),
            to: NodeId(
                1,
            ),
            slot: BindingSlotId(
                "cbu",
            ),
        },
        BindingEdge {
            from: NodeId(
                1,
            ),
            to: NodeId(
                2,
            ),
            slot: BindingSlotId(
                "case",
            ),
        },
        ResourceCoordEdge {
            node_a: NodeId(
                0,
            ),
            node_b: NodeId(
                3,
            ),
        },
        StateEdge {
            from: NodeId(
                2,
            ),
            to: NodeId(
                4,
            ),
        },
    ],
}
