rust/crates/dsl-core/tests/snapshots/plan_golden__dag_empty_has_no_edges.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 126
expression: dag
---
PopulatedExecutionDag {
    edges: [],
}
