rust/crates/dsl-core/tests/snapshots/plan_golden__dag_join_barrier_wait_all.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 195
expression: dag
---
PopulatedExecutionDag {
    edges: [
        JoinBarrierEdge {
            predecessors: [
                NodeId(
                    0,
                ),
                NodeId(
                    1,
                ),
                NodeId(
                    2,
                ),
            ],
            join_node: NodeId(
                3,
            ),
            mode: WaitAll,
        },
    ],
}
