rust/crates/dsl-core/tests/snapshots/plan_golden__dag_ordering_edges_filter.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 226
expression: ordering_pairs
---
[
    (
        0,
        1,
    ),
    (
        1,
        2,
    ),
]
