rust/crates/dsl-core/tests/snapshots/plan_golden__dag_resource_coord_edge.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 184
expression: dag
---
PopulatedExecutionDag {
    edges: [
        ResourceCoordEdge {
            node_a: NodeId(
                0,
            ),
            node_b: NodeId(
                2,
            ),
        },
    ],
}
