rust/crates/dsl-core/tests/snapshots/plan_golden__dag_single_binding_edge.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 137
expression: dag
---
PopulatedExecutionDag {
    edges: [
        BindingEdge {
            from: NodeId(
                0,
            ),
            to: NodeId(
                1,
            ),
            slot: BindingSlotId(
                "cbu",
            ),
        },
    ],
}
