rust/crates/dsl-core/tests/snapshots/plan_golden__dag_snapshot_version_edge.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 174
expression: dag
---
PopulatedExecutionDag {
    edges: [
        SnapshotVersionEdge {
            from: NodeId(
                0,
            ),
            to: NodeId(
                1,
            ),
        },
    ],
}
