rust/crates/dsl-core/tests/snapshots/plan_golden__dag_state_edge.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 164
expression: dag
---
PopulatedExecutionDag {
    edges: [
        StateEdge {
            from: NodeId(
                0,
            ),
            to: NodeId(
                1,
            ),
        },
    ],
}
