rust/crates/dsl-core/tests/snapshots/plan_golden__plan_policy_admin_override_is_atomic_short.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 77
expression: policy
---
AtomicShort
