rust/crates/dsl-core/tests/snapshots/plan_golden__plan_policy_append_fact_is_durable_step.snap
---
source: crates/dsl-core/tests/plan_golden.rs
assertion_line: 50
expression: policy
---
DurableStep
